IronGallery/iron-gallery.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iron-gallery
  labels:
    run: iron-gallery
spec:
  replicas: 1
  selector:
    matchLabels:
      run: iron-gallery
  template:
    metadata:
      labels:
        run: iron-gallery
    spec:
      containers:
      - name: irongallery
        image: kodekloud/irongallery:2.0
        volumeMounts:
          - name: config
            mountPath: /usr/share/nginx/html/data
          - name: images
            mountPath: /usr/share/nginx/html/uploads
        resources:
          limits:
            memory: "100Mi"
            cpu: "50m"
      volumes:
        - name: config
          emptyDir: {}
        - name: images
          emptyDir: {}
