IronGallery/iron-db-service.yml
apiVersion: v1
kind: Service
metadata:
  name: iron-db-service
spec:
  selector:
    db: mariadb
  ports:
    - port: 3306
      targetPort: 3306
