IronGallery/iron-gallery-service.yml
apiVersion: v1
kind: Service
metadata:
  name: iron-gallery-service
spec:
  selector:
    run: iron-gallery
  ports:
    - port: 80
      targetPort: 80
